{
    "name": "KeyboardController",
    "maps": [
        {
            "name": "vehicleControls",
            "id": "ffa75281-431a-40ae-a921-032e82ae78ad",
            "actions": [
                {
                    "name": "Accelerate",
                    "type": "Value",
                    "id": "497535ca-34ab-4d40-b924-6950a8984e28",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "NextCam",
                    "type": "Button",
                    "id": "90c1d2e6-1808-467e-ac90-a6eaf822bc59",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Brake",
                    "type": "Value",
                    "id": "e72c2522-5527-43d6-bec6-017c4a150c57",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Steer",
                    "type": "Value",
                    "id": "d1f5dcb9-4cb3-4b5f-987f-bba70c49e53d",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "GearUp",
                    "type": "Button",
                    "id": "0dcd883c-45e8-4f36-b1d6-7d5c4cac3f77",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "GearDown",
                    "type": "Button",
                    "id": "ddb95ab4-7810-4257-8384-4db40dbcfab9",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DRS",
                    "type": "Button",
                    "id": "e72fbe63-7547-4154-b5d7-bba1bf7d7920",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b4fe17a3-6135-4ba6-9709-afd67418e28f",
                    "path": "<Keyboard>/w",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Accelerate",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4937dc5e-c3a9-4187-87ef-9d8ce1c64cde",
                    "path": "<Keyboard>/c",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "NextCam",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6e6f4431-3e76-4ca5-b1d7-ae914e1cab69",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Brake",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "1D Axis",
                    "id": "1c916c39-7ff2-4b6a-8a8e-f8ba90c48cfb",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Steer",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "9bb1a656-8fae-4a68-acd1-a3bb7479bbbc",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Steer",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "a893e4e7-9a96-4b41-99c4-54c86c88b35f",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Steer",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "77b95c53-ae84-49d0-bb01-62f54679bba4",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GearUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b4a2331c-4f4f-4a47-be80-5bb186fcc98b",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GearDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "04659590-e919-4da5-85aa-77e6e8e218d6",
                    "path": "<Keyboard>/leftCtrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DRS",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}